# tacker-specs

./: .gitignore  .gitreview  .zuul.yaml  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
playbooks/: pre.yaml
specs/: skeleton.rst  template.rst
specs/2023.1/: add-sample-coordination.rst  enhance-tacker-policy.rst  enhance_placement_process.rst  improving-mgmt-driver-log.rst  index.rst  srbac-implement-project-personas.rst  support-multi-conductors-onboarding.rst  support-tacker-db-manage-postgresql.rst  support-threshold-pm-interface.rst  vnfm-autoheal-and-autoscale.rst
specs/2023.2/: index.rst  placeholder.rst  support-external-keymanager.rst  support-k8s-cr.rst  terraform-infra-driver.rst
specs/2024.1/: index.rst
specs/2024.2/: index.rst
specs/2025.1/: enhancement-ansible-driver.rst  index.rst
specs/2025.2/: index.rst  v1-heal-cinder-volume.rst  vim-key-for-multi-master.rst
specs/2026.1/: index.rst  multi-tenant-vnfdid-onboarding.rst  support_tst_rel3_for_compliance_testing.rst
specs/2026.2/: index.rst  placeholder.rst
specs/archive/: index.rst
specs/juno/: api.rst
specs/liberty/: index.rst  monitor-framework.rst  tacker-api-mano.rst
specs/mitaka/: automatic-resource-creation.rst  enhanced-placement.rst  example.rst  index.rst  multi-site-feature.rst  tosca-parser-integration.rst
specs/newton/: alarm-based-monitoring-driver.rst  event_logging.rst  index.rst  manual-and-auto-scaling.rst  tacker-networking-sfc.rst  tacker-vnffg.rst
tests/: test_titles.py
(+290 files in other folders)
