[metadata]
name = tacker-specs
summary = OpenStack Tacker Project Development Specs
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://specs.openstack.org/openstack/tacker-specs/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[wheel]
universal = 1
