[metadata]
name = tacker-specs
description = OpenStack Tacker Project Development Specs
long_description = file: README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
url = https://specs.openstack.org/openstack/tacker-specs/
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
